--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-  <h1>ANKIT SUMRA😜❤</h1>
-  <em>STUDENT OF <strong>DIT UNIVERSITY</strong> </em>
+  <h1>😜❤</h1>
+  <em>STUDENT OF <strong>DT UNIVERSITY</strong> </em>
   <p>i an a btech 3 year student</p>
   <hr>
 
